--- a/Titanic.ipynb
+++ b/Titanic.ipynb
@@ -6,7 +6,9 @@
       "name": "Titanic.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "toc_visible": true
+      "toc_visible": true,
+      "authorship_tag": "ABX9TyPtR1Lt/2iat+jICUkchBy7",
+      "include_colab_link": true
     },
     "kernelspec": {
       "display_name": "Python 3",
@@ -17,6 +19,16 @@
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/Brianorinah/Titanic-EDA-ML-Model/blob/EDA/Titanic.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "code",
       "metadata": {
